[gd_scene load_steps=10 format=3 uid="uid://d6m8i42sep5r"]

[ext_resource type="Script" path="res://scenes/characters/player/player.gd" id="1_vot3j"]
[ext_resource type="Texture2D" uid="uid://b2s3iy43pikj4" path="res://scenes/characters/player/player.png" id="2_4qwgh"]
[ext_resource type="PackedScene" uid="uid://bj0k1mylrpyiw" path="res://scenes/components/health_component.tscn" id="3_6dnyl"]
[ext_resource type="PackedScene" uid="uid://cw2ua5e15wnhh" path="res://scenes/abilities/ability_sword/ability_sword_manager.tscn" id="3_052bo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsxo7"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u047t"]
bg_color = Color(0.145098, 0.584314, 0.415686, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_f1ejc"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dufji"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_equwn"]
radius = 7.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_vot3j")

[node name="Managers" type="Node" parent="."]

[node name="Abilities" type="Node" parent="Managers"]
unique_name_in_owner = true

[node name="AbilitySwordManager" parent="Managers/Abilities" instance=ExtResource("3_052bo")]

[node name="HealthComponent" parent="Managers" instance=ExtResource("3_6dnyl")]

[node name="DamageCooldown" type="Timer" parent="Managers"]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(20, 4)
offset_left = -10.0
offset_top = -23.0
offset_right = 10.0
offset_bottom = -19.0
pivot_offset = Vector2(10, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_dsxo7")
theme_override_styles/fill = SubResource("StyleBoxFlat_u047t")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_4qwgh")
region_rect = Rect2(0, 112, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_f1ejc")

[node name="PickupArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dufji")
debug_color = Color(0, 0.7, 0.0699999, 0.0392157)

[node name="DamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_equwn")
debug_color = Color(0.7, 0, 0.0116665, 0.0784314)
